<resources>
    <string name="app_name">Ask Hail</string>
    <string name="there_error">an error occurred</string>
    <string name="some_thing_wrong">Sorry, an unexpected error occurred, please try again later</string>
    <string name="there_no_data_info">There is no data</string>
    <string name="there_no_data">no information</string>
    <string name="offline">not connected</string>
    <string name="offlineMain">An internet connection error occurred, please try again</string>
    <string name="required_field">Required field</string>
    <string name="validate_email">Invalid mail</string>
    <string name="validate_phone">Incorrect phone</string>
    <string name="validae_lengh">Short word</string>
    <string name="validae_dismatch">Misfit</string>
    <string name="welcome">Hello</string>
    <string name="welcome_info">God bless you in the Ask Hail application, everything you need to know about Hail (real estate, tourist attractions, events, places of entertainment)</string>
    <string name="login_exist_account">Log in to a registered account</string>
    <string name="create_new_account">Register a new account</string>
    <string name="view_as_visitor">Browse as a visitor</string>
    <string name="type_account_info">Enter account information</string>
    <string name="phone_number">Mobile number</string>
    <string name="password">password</string>
    <string name="forget_password">Forgot your password?</string>
    <string name="login">Login</string>
    <string name="reset_password">Restore password</string>
    <string name="type_your_phone">Enter the registered mobile number in your account</string>
    <string name="next">next one</string>
    <string name="confirm_code_info">A 4-digit code has been sent to your mobile phone in an SMS. Please enter the code to continue</string>
    <string name="not_get_code">Didn\'t receive the code?</string>
    <string name="can_another_within">You can request another code</string>
    <string name="reset_password_info">The code has been verified successfully.
        You can now reset the password for your account</string>
    <string name="new_password">New Password</string>
    <string name="re_password">confirm password</string>
    <string name="confirm">Confirm</string>
    <string name="register_info">The code has been verified successfully. Please complete your information below</string>
    <string name="full_name">full name</string>
    <string name="email">E-mail</string>
    <string name="terms_accept">By registering for the Ask Hail application, I agree to</string>
    <string name="terms_and_condition">Terms and Conditions</string>
    <string name="cont">Continue</string>
    <string name="success_reg">successfully registered</string>
    <string name="success_reg_info">Thank you for registering with us! You can now use the Ask Hail application without restrictions</string>
    <string name="unAuthorize">Please re-login</string>
    <string name="there_error_unkown">"Something went wrong"</string>
    <string name="type_code">A 4-digit code has been sent to your mobile phone in an SMS. Please enter the code to continue</string>
    <string name="now_by_click">Now click here</string>
    <string name="must_accept_terms">You must agree to the terms and conditions</string>
    <string name="home">Main</string>
    <string name="messages">Conversations</string>
    <string name="ask_hail">Ask Hail</string>
    <string name="more">More</string>
    <string name="try_again">Try again</string>
    <string name="special_ads">Featured ads</string>
    <string name="realstates">Real estate</string>
    <string name="business_part">Business sector</string>
    <string name="special">Special</string>
    <string name="show_all_special_ads">Show all featured ads</string>
    <string name="sar">SAR</string>
    <string name="km">How many</string>
    <string name="sub_section_adverts">Subsection announcements</string>
    <string name="adverts">Advertisement</string>
    <string name="orders">Requests</string>
    <string name="available">available</string>
    <string name="the_description">the description</string>
    <string name="the_feature">Property specifications</string>
    <string name="advert_main_image">Promotional photo of the property</string>
    <string name="advert_no">\'Ad number\'</string>
    <string name="the_links">Means of communication</string>
    <string name="the_address">Title</string>
    <string name="go_now">Go off now</string>
    <string name="the_adverter">The advertiser</string>
    <string name="calling">a call</string>
    <string name="whats">Whatsapp</string>
    <string name="chating_start">Start a conversation</string>
    <string name="adverter_page">Advertiser page</string>
    <string name="advs">Advertisement</string>
    <string name="add_comment">add a comment</string>
    <string name="show_more">Show more</string>
    <string name="add_rate">Add an assessment</string>
    <string name="rates">Ratings</string>
    <string name="comments">Comments</string>
    <string name="no_comments">There are no comments</string>
    <string name="no_rates">"There are no reviews"</string>
    <string name="comment">comment</string>
    <string name="delete_comment">Delete comment</string>
    <string name="says">Says ...</string>
    <string name="copied">Copied</string>
    <string name="delete_rate">Delete the evaluation</string>
    <string name="rated">Valuable ...</string>
    <string name="new_add">Add new</string>
    <string name="advert">Advertising</string>
    <string name="order">Order</string>
    <string name="question">Question</string>
    <string name="title_activity_advert_on_map">Map</string>
    <string name="advert_on_map">Ads on the map</string>
    <string name="create_new_advert">Add a new ad</string>
    <string name="create_advert_terms">Before you can post the advertisement, you must agree to the terms and conditions of use</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="tesing_long">The property is everything that is fixed in place and cannot be moved without damage, ie the land, buildings and trees that are connected to the land contact decision. And the real estate is divided into two parts: real estate by its nature and real estate by allocation, which is what was previously mentioned, that is, things related to land contact decision. It is not considered real estate in relation to the land except what is part of it. It follows that the treasure is not real estate, despite being buried in the ground. They are the things that are fixed in place and which cannot be moved without damage. It is considered the asset against the rest of the real estate category. It includes land and buildings and plants that are attached to it, including devices and pipes such as elevators, gas pipes, water channels and electricity wires. It also includes injury to its market and the fruits in its assets. If it is taken, it becomes movable, even if it is not transferred. It is also considered one of the natural movables. “The property is everything that is fixed in its place and cannot be moved without damage, that is, the land, buildings and trees that are connected to the land contact decision. And the real estate is divided into two parts: real estate by its nature and real estate by allocation, which is what was previously mentioned, that is, things related to land contact decision. It is not considered real estate in relation to the land except what is part of it. It follows that the treasure is not real estate, despite being buried in the ground. They are the things that are fixed in place and which cannot be moved without damage. It is considered the asset against the rest of the real estate category. It includes land and what is erected on it from buildings and plants that are attached to it from devices and pipes such as elevators, gas pipes, water channels and electricity wires, and it also includes the injury to its market and the fruits in its assets.</string>
    <string name="terms_accept_advert">I agree to the terms and conditions</string>
    <string name="no_package">You are not subscribed to any ads package from Ask Hail, choose one of the packages to continue</string>
    <string name="price">price</string>
    <string name="period">Period</string>
    <string name="day">day</string>
    <string name="payment_time">Time of payment</string>
    <string name="pay_now">Pay now</string>
    <string name="pay_later">Pay later</string>
    <string name="case_pay_later">If you pay later</string>
    <string name="case_pay_later_info">In case of paying later, the value of the package must be paid within 24 hours, or the advertisement will be suspended</string>
    <string name="select_payment_type">Select one of the following options to continue purchasing</string>
    <string name="bank_transfer">Bank transfer</string>
    <string name="e_pay">Electronic payment</string>
    <string name="pay_package_price">Pay the cost of the package</string>
    <string name="select_payment_bank">Choose one of the following bank accounts to transfer to</string>
    <string name="mostafeed">beneficiary</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="account_number">account number</string>
    <string name="iPan">IBAN</string>
    <string name="bank_transter_info">Enter the transfer information to complete the subscription</string>
    <string name="transfer_name">Name of the adapter</string>
    <string name="transfer_bank">The bank from which it is transferred</string>
    <string name="transfer_account">The number of the account transferred from it</string>
    <string name="confirm_transfer">Confirm the transfer</string>
    <string name="success_payment">Payment was successful</string>
    <string name="error_payment">There is something wrong with the payment process</string>
    <string name="select_section">Select the type of property</string>
    <string name="section">Section</string>
    <string name="subsection">Subsection</string>
    <string name="confirm_section_type">Confirm the type of property</string>
    <string name="select_main_category_first">Choose the main section first</string>
    <string name="select_media">Add photos and videos of the property
        \n
        (Maximum of 2 videos)</string>
    <string name="add_new_pic_vedio">Add another photo /video</string>
    <string name="select_cover">Promotional photo of the property
                \n
        (Photo or promotional flyer for the property)</string>
    <string name="confirm_media">Add photos</string>
    <string name="max_video">It is not possible to add more than 2 videos</string>
    <string name="select_cover_hint">Choose a promotional image</string>
    <string name="check_draft_info">You have an incomplete ad ... you must choose between completing it or creating a new one</string>
    <string name="cont_advert">Complete the announcement</string>
    <string name="create_advert">New construction</string>
    <string name="select_specification">Enter the property details</string>
    <string name="advert_title">Address of the request</string>
    <string name="advert_desc">Description of the request</string>
    <string name="advert_location">Determine the address on the map</string>
    <string name="advert_price">price</string>
    <string name="advert_side">The entity</string>
    <string name="advert_block">Neighborhood</string>
    <string name="select_slide">Choose the destination</string>
    <string name="another_contact_number">Another contact number</string>
    <string name="edit_advert_data">Edit ad data</string>
    <string name="the_section">Section</string>
    <string name="photos">Pictures</string>
    <string name="the_specification">Specifications</string>
    <string name="the_communication">Communication methods</string>
</resources>