<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg_round_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:gravity="center"
        android:padding="@dimen/_8dp"
        android:text="@string/payment_time"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/viewPayNow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/_16dp"
                android:text="@string/pay_now"
                android:textColor="@color/colorInputUnderLine"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold" />
        </FrameLayout>

        <View
            android:layout_width="@dimen/_1dp"
            android:layout_height="match_parent"
            android:alpha=".5"
            android:background="@color/colorTextPrimary" />

        <FrameLayout
            android:id="@+id/viewPayLater"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="@dimen/_16dp"
                android:text="@string/pay_later"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold" />
        </FrameLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF1F4"
        android:orientation="horizontal"
        android:padding="@dimen/_16dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_alert" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/case_pay_later"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4dp"
                android:layout_marginEnd="@dimen/_32dp"
                android:text="@string/case_pay_later_info"
                android:textAlignment="viewStart"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/_14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>