<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:background="@drawable/dialog_bg_round_white"
    android:layout_height="wrap_content">
    <TextView
        android:layout_marginTop="@dimen/_16dp"
        android:textColor="@color/colorTextPrimary"
        android:padding="@dimen/_8dp"
        android:gravity="center"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold"
        android:text="@string/edit_advert_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <FrameLayout
            android:padding="8dp"
            android:id="@+id/viewEditSection"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/_8dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_16sp"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/the_section"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>
        <View
            android:alpha=".5"
            android:background="@color/colorTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"/>
        <FrameLayout
            android:padding="8dp"
            android:id="@+id/viewEditMedia"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/_8dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_16sp"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/photos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>
        <View
            android:alpha=".5"
            android:background="@color/colorTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <FrameLayout
            android:padding="8dp"
            android:id="@+id/viewEditSpecification"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/_8dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_16sp"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/the_specification"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>
        <View
            android:alpha=".5"
            android:background="@color/colorTextPrimary"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <FrameLayout
            android:padding="8dp"
            android:id="@+id/viewEditCommunication"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:padding="@dimen/_8dp"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_16sp"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/the_communication"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>

    </LinearLayout>
</LinearLayout>