<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg_round_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:gravity="center"
        android:padding="@dimen/_8dp"
        android:text="@string/another_contact_number"
        android:textColor="@color/colorTextPrimary"
        android:textSize="@dimen/_18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:orientation="horizontal">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/_16dp"
            android:id="@+id/tilPhone"
            style="@style/Widget.AppTheme.TextInputLayoutList"
            android:layout_width="match_parent"
            app:startIconDrawable="@drawable/ic_phone"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            app:endIconDrawable="@drawable/ic_prefix_phone"
            app:endIconMode="custom"
            app:helperText="  "
            android:hint="@string/phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiePhone"
                android:inputType="phone"
                style="@style/TextInputEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <Button
        android:id="@+id/btnConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/confirm"
        style="@style/btnPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>